--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CellularFilling</string>
+    <string name="cellular_filling">Клеточное наполнение</string>
 </resources>
